cluster/homelab/apps/external/trunas-minio-s3/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-ingress
  namespace: external
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`s3.opryga.com`) && PathPrefix(`/reactive-resume/`) # change this to a public bucket on minio
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: traefik
        # - name: crowdsec-bouncer
        #   namespace: traefik
      services:
        - name: minio
          port: 9000
  tls:
    secretName: opryga-com-tls
